crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__field_suffix-4.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"class Base { int base_field; } class Derived : Base { int derived_field; } class Bar<Derived bar> { int x = bar.b$\")"
---
[
    CompletionItem {
        label: "base_field",
        insert_text_snippet: None,
        detail: "int",
        documentation: None,
        kind: Field,
        sort_text: Some(
            "0",
        ),
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "derived_field",
        insert_text_snippet: None,
        detail: "int",
        documentation: None,
        kind: Field,
        sort_text: Some(
            "0",
        ),
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
]
