crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__field_suffix-6.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"class Foo { int field1; } class Bar<list<list<Foo>> foos> { int x = foos[0][0].f$\")"
---
[
    CompletionItem {
        label: "field1",
        insert_text_snippet: None,
        detail: "int",
        documentation: None,
        kind: Field,
        sort_text: Some(
            "0",
        ),
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
]
