crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__field_suffix-7.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(r#\"\nclass base1 { int field1; }\nclass base2 { int field2; }\nclass base3 { int field3; }\nclass derived12: base1, base2;\nclass derived123: base1, base2, base3;\ndef derived12_val : derived12;\ndef derived123_val : derived123;\ndefvar val1 = !if(false, derived12_val, derived123_val);\ndefvar val2 = val1.f$\n            \"#)"
---
[
    CompletionItem {
        label: "field1",
        insert_text_snippet: None,
        detail: "int",
        documentation: None,
        kind: Field,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "field2",
        insert_text_snippet: None,
        detail: "int",
        documentation: None,
        kind: Field,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
]
