crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__keyword.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"c$\")"
---
[
    CompletionItem {
        label: "assert",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "class",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "def",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "defm",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "defset",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "deftype",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "defvar",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "dump",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "foreach",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "if",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "include",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "let",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "multiclass",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
]
