crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__multiclass-2.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"multiclass Base<int x>; multiclass Derived<int y>; defm test : B$\")"
---
[
    CompletionItem {
        label: "Base",
        insert_text_snippet: Some(
            "Base<${1}>$0",
        ),
        detail: "multiclass",
        documentation: None,
        kind: Multiclass,
        sort_text: None,
        trigger_signature_help: true,
        item_type: None,
    },
    CompletionItem {
        label: "Derived",
        insert_text_snippet: Some(
            "Derived<${1}>$0",
        ),
        detail: "multiclass",
        documentation: None,
        kind: Multiclass,
        sort_text: None,
        trigger_signature_help: true,
        item_type: None,
    },
]
