crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__multiclass.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"multiclass Foo; defm bar : F$\")"
---
[
    CompletionItem {
        label: "Foo",
        insert_text_snippet: Some(
            "Foo$0",
        ),
        detail: "multiclass",
        documentation: None,
        kind: Multiclass,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
]
