crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__type-3.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"class Foo<int a>; class Bar : F$;\")"
---
[
    CompletionItem {
        label: "Foo",
        insert_text_snippet: Some(
            "Foo<${1}>$0",
        ),
        detail: "class",
        documentation: None,
        kind: Class,
        sort_text: None,
        trigger_signature_help: true,
        item_type: Some(
            Record {
                data: DefinedRecord(
                    Class(
                        Id {
                            idx: 0,
                        },
                    ),
                ),
                name: "Foo",
                _priv: (),
            },
        ),
    },
]
