crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__type-4.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"class Base1; class Base2; class Derived : Base1, B$;\")"
---
[
    CompletionItem {
        label: "Base2",
        insert_text_snippet: Some(
            "Base2$0",
        ),
        detail: "class",
        documentation: None,
        kind: Class,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Record {
                data: DefinedRecord(
                    Class(
                        Id {
                            idx: 1,
                        },
                    ),
                ),
                name: "Base2",
                _priv: (),
            },
        ),
    },
]
