crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__value-4.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"class Foo { int field1; int field2 = f$\",)"
---
[
    CompletionItem {
        label: "false",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: Some(
            "0",
        ),
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "field1",
        insert_text_snippet: None,
        detail: "int",
        documentation: None,
        kind: Field,
        sort_text: Some(
            "0",
        ),
        trigger_signature_help: false,
        item_type: Some(
            Int {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "true",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: Some(
            "0",
        ),
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "Foo",
        insert_text_snippet: Some(
            "Foo<>$0",
        ),
        detail: "class",
        documentation: None,
        kind: Class,
        sort_text: Some(
            "1",
        ),
        trigger_signature_help: false,
        item_type: Some(
            Record {
                data: DefinedRecord(
                    Class(
                        Id {
                            idx: 0,
                        },
                    ),
                ),
                name: "Foo",
                _priv: (),
            },
        ),
    },
]
